--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,11 @@ body{
     line-height: 1.6em;
     margin:0;
     font-weight: normal;
+    transition: 0.7s;
+    -webkit-transition: 0.7s;
+    -moz-transition: 0.7s;
+    -ms-transition: 0.7s;
+    -o-transition: 0.7s;
 }
 
 
@@ -28,7 +33,6 @@ body{
 
 #navbar{
     background-color: #333;
-    
 }
 
 
@@ -40,7 +44,7 @@ body{
 
 
 #navbar li{
-    display: inline
+    display: inline;
 }
 
 
@@ -49,6 +53,12 @@ body{
     color:#fff;
     font-size: 18px;
     padding-right: 15px;
+    transition: all 0.5s ease;
+     -webkit-transition: all 0.5s ease;
+     -moz-transition: all 0.5s ease;
+     -ms-transition: all 0.5s ease;
+     -o-transition: all 0.5s ease;
+
 }
 
 
@@ -59,10 +69,16 @@ body{
 
 #show{
     background-image:url('../images/wp3205211.png');
+    background-attachment: fixed;
     background-position: bottom right;
     min-height:300px;
     margin-bottom: 30px;
-    color:#f4f4f4; 
+    color:#f4f4f4;
+    transition: 0.5s;
+    -webkit-transition: 0.5s;
+    -moz-transition: 0.5s;
+    -ms-transition: 0.5s;
+    -o-transition: 0.5s;
 }
 
 
@@ -90,7 +106,7 @@ body{
 #navbar-2{
     float: right;
     width: 60%;
-    margin-bottom:30px; 
+    margin-bottom:30px;
     padding-left: 20px;
     overflow:hidden;
     background-color:  burlywood;
@@ -99,6 +115,20 @@ body{
     border-left: 3px rgba(70, 121, 155, 0.897) solid;
     border-bottom: 5px rgba(70, 121, 155, 0.897) solid;
     box-sizing: border-box;
+    transition: all 0.5s ease;
+    border-bottom-left-radius: 15px;
+    -webkit-transform:;
+    -moz-transform:;
+    -ms-transform:;
+    -o-transform:;
+    -webkit-transition: all 0.5s ease;
+    -moz-transition: all 0.5s ease;
+    -ms-transition: all 0.5s ease;
+    -o-transition: all 0.5s ease;
+    -webkit-border-radius:;
+    -moz-border-radius:;
+    -ms-border-radius:;
+    -o-border-radius:;
 }
 
 
@@ -123,6 +153,11 @@ body{
 .objectives{
     padding: 0;
     text-align: center;
+    transition: 0.6s;
+    -webkit-transition: 0.6s;
+    -moz-transition: 0.6s;
+    -ms-transition: 0.6s;
+    -o-transition: 0.6s;
 }
 
 
@@ -135,6 +170,7 @@ body{
     text-align: right;
     border-right: 2px  burlywood solid;
     border-top: 4px  burlywood solid;
+    border-top-right-radius: 15px;
 
 }
 
@@ -149,6 +185,7 @@ body{
     text-align: left;
     border-top: 4px  burlywood solid;
     border-left: 2px  burlywood solid;
+    border-top-left-radius: 15px;
 }
 
 
@@ -161,6 +198,7 @@ body{
     text-align: right;
     border-top: 4px burlywood solid;
     border-right: 2px burlywood solid;
+    border-top-right-radius: 15px;
 }
 
 
@@ -173,6 +211,7 @@ body{
     text-align: right;
     border-top: 4px  burlywood solid;
     border-right: 2px  burlywood solid;
+    border-top-right-radius: 15px;
 }
 
 
@@ -181,6 +220,11 @@ body{
     width: 70%;
     padding: 0 30px;
     box-sizing: border-box;
+    transition: all 0.3s ease;
+    -webkit-transition: all 0.3s ease;
+    -moz-transition: all 0.3s ease;
+    -ms-transition: all 0.3s ease;
+    -o-transition: all 0.3s ease;
 }
 
 
@@ -192,7 +236,13 @@ body{
     padding: 15px;
     border-left: 3px burlywood solid;
     border-bottom: 5px burlywood solid;
-    box-sizing: border-box
+    box-sizing: border-box;
+    border-bottom-left-radius: 20px;
+    transition: all 0.9s ease;
+    -webkit-transition: all 0.9s ease;
+    -moz-transition: all 0.9s ease;
+    -ms-transition: all 0.9s ease;
+    -o-transition: all 0.9s ease;
 }
 
 
@@ -234,7 +284,6 @@ body{
     margin-top: 40px;
 }
 
-
 #main-footer a{
     text-decoration: none;
     color: #fff
@@ -246,7 +295,8 @@ body{
 }
 
 
-@media(max-width:600px){
+@media(max-width:600px)
+{
     #main{
         width: 100%
         float:none;
@@ -256,4 +306,136 @@ body{
         width: 100%
         float:none;
     }
+}
+
+#contact-form button[type="submit"] {
+    cursor:pointer;
+    width:100%;
+    border:none;
+    background:rgba(70, 121, 155, 0.897);
+    background-image:linear-gradient(bottom, burlywood 0%,  rgba(70, 121, 155, 0.897) 52%);
+    background-image:-moz-linear-gradient(bottom, burlywood 0%, rgba(70, 121, 155, 0.897) 52%);
+    background-image:-webkit-linear-gradient(bottom, burlywood 0%, rgba(70, 121, 155, 0.897) 52%);
+    color:#FFF;
+    margin:0 0 5px;
+    padding: 10px 0px;
+    border-radius:5px;
+}
+::-webkit-input-placeholder {
+    color:rgba(70, 121, 155, 0.897);
+}
+:-moz-placeholder {
+    color:rgba(70, 121, 155, 0.897);
+}
+::-moz-placeholder {
+    color:rgba(70, 121, 155, 0.897);
+}
+:-ms-input-placeholder {
+    color:rgba(70, 121, 155, 0.897);
+}
+
+.sidebar_contact{
+     position: fixed;
+     top: 50%;
+     left: 0px;
+     transform: translateY(-50%);
+     width: 350px;
+     height: auto;
+     padding: 40px;
+     background: burlywood;
+     border-bottom-right-radius: 20px;
+     box-shadow: 0 20px 50px rgba(0, 0, 0, .5);
+     -webkit-transform: translateY(-50%);
+     -moz-transform: translateY(-50%);
+     -ms-transform: translateY(-50%);
+     -o-transform: translateY(-50%);
+     box-sizing: border-box;
+     transition: all 0.5s ease;
+     -webkit-transition: all 0.5s ease;
+     -moz-transition: all 0.5s ease;
+     -ms-transition: all 0.5s ease;
+     -o-transition: all 0.5s ease;
+}
+.sidebar_contact_active{
+    position: fixed;
+    top: 50%;
+    left: -350px;
+    transform: translateY(-50%);
+    width: 350px;
+    height: auto;
+    padding: 40px;
+    background: burlywood;
+    box-shadow: 0 20px 50px rgba(0, 0, 0, .5);
+    -webkit-transform: 0.5s;
+    -moz-transform: 0.5s;
+    -ms-transform: 0.5s;
+    -o-transform: 0.5s;
+    box-sizing: border-box;
+    transition: all 0.5s ease;
+    -webkit-transition: all 0.5s ease;
+    -moz-transition: all 0.5s ease;
+    -ms-transition: all 0.5s ease;
+    -o-transition: all 0.5s ease;
+
+}
+.sidebar_contact input,
+.sidebar_contact textarea
+{
+    width: 100%;
+    padding: 5px;
+    margin-bottom: 10px;
+    box-sizing: border-box;
+    border: 1px solid rgba(70, 121, 155, .5);
+    outline: none;
+    border-radius:5px;
+}
+.sidebar_contact input
+{
+    height: 36px;
+}
+.sidebar_contact h3
+{
+    margin: 0 0 20px;
+    padding: 0;
+}
+.sidebar_contact textarea{
+    height:80px;
+    resize: none;
+    box-shadow:inset 0 1px 2px #DDD, 0 1px 0 #FFF;
+    -webkit-box-shadow:inset 0 1px 2px #DDD, 0 1px 0 #FFF;
+    -moz-box-shadow:inset 0 1px 2px #DDD, 0 1px 0 #FFF;
+    border:1px solid #CCC;
+    background:#FFF;
+    padding: 10px 0px;
+    border-radius:5px;
+}
+.toggle{
+    position: absolute;
+    top: 0;
+    right: -48px;
+    width: 48px;
+    height: 48px;
+    line-height: 48px;
+    text-align: center;
+    cursor: pointer;
+    background: #f00;
+    border-bottom-right-radius: 15px;
+    border-top-right-radius: 15px;
+}
+.toggle:before{
+    content: "\f003";
+    font-family: fontAwesome;
+    color: #fff;
+}
+.sidebar_contact #error_message{
+    margin: 20px;
+    padding:  0px;
+    background: #fe8b8e;
+    text-align: center;
+    font-size: 14px;
+    transition: all 0.5s ease;
+    -webkit-transition: all 0.5s ease;
+    -moz-transition: all 0.5s ease;
+    -ms-transition: all 0.5s ease;
+    -o-transition: all 0.5s ease;
 }
